[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/fonts/STXINWEI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Global/GamePauseWindow/GamePauseWindow.gd" type="Script" id=2]
[ext_resource path="res://Art/temp/ElectricArea.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
outline_size = 10
outline_color = Color( 0.27451, 0.341176, 0.796078, 1 )
font_data = ExtResource( 1 )

[node name="GamePauseWindow" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 10, 5 )
texture = ExtResource( 3 )

[node name="QuitButton" type="Button" parent="."]
margin_left = 760.0
margin_top = 440.0
margin_right = 1040.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
margin_left = 280.0
margin_top = 440.0
margin_right = 560.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
margin_left = 520.0
margin_top = 320.0
margin_right = 772.0
margin_bottom = 420.0
custom_fonts/font = SubResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 599.0
margin_top = 250.0
margin_right = 681.0
margin_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.839216, 0.145098, 0.301961, 1 )
text = "Game Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
